# modeling-heating-oil-and-crude-oil-fuel-price-relationships-using-vector-error-correction-model

./: README.md  article.md  config.yaml  main.py  pyproject.toml  requirements.txt  script.py  wti_crude_oil_price_fetcher.ipynb  wti_crude_oil_price_fetcher.py
src/: core.py
