[project]
name = "modeling-heating-oil-and-crude-oil-fuel-price-rela"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "imageio>=2.37.3",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.3",
    "pytest>=9.0.3",
    "pyyaml>=6.0.3",
    "statsmodels>=0.14.6",
    "yfinance>=1.3.0",
]
